fix card alignments

--- a/style.css
+++ b/style.css
@@ -939,7 +939,7 @@ main:nth-child(10){
     left: 450px;
     width: 250px;
     height: 350px;
-    margin-top: -30px;
+    margin-top: -20px;
     margin-bottom: 10px;
     background: linear-gradient(rgb(225,150,58),rgb(227,144,91));
     transition:.6s;
@@ -1047,11 +1047,10 @@ main:nth-child(10){
 .card3 {
     text-align:center;
     position: absolute;
-    left: 850px;
+    left: 820px;
     width: 250px;
     height: 350px;
-    margin-top: 100px;
-    margin-bottom: 10px;
+    margin-top: -20px;
     background: linear-gradient(#ff5252, #b33939);
     transition:.6s;
 
@@ -1071,10 +1070,10 @@ main:nth-child(10){
 .card4 {
     text-align:center;
     position: absolute;
-    left: 850px;
+    left: 820px;
     width: 250px;
     height: 350px;
-    margin-top: 350px;
+    margin-top: 200px;
     margin-bottom: 10px;
     background: linear-gradient(#52ffdf, #39b3a5);
     transition:.6s;
